[gd_scene load_steps=3 format=1]

[ext_resource path="res://battle/CharSprite.gd" type="Script" id=1]
[ext_resource path="res://battle/raiders.png" type="Texture" id=2]

[node name="Char" type="Position2D"]

script/script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SpritePos" type="Position2D" parent="."]

[node name="AttackPos" type="Position2D" parent="SpritePos"]

[node name="CenterPos" type="Position2D" parent="SpritePos"]

[node name="Shadow" type="Sprite" parent="SpritePos"]

visibility/behind_parent = true
transform/scale = Vector2( 1.40351, 1 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 5, 116, 114, 33 )

[node name="Sprite" type="Sprite" parent="SpritePos"]


